--- a/config/database.yml
+++ b/config/database.yml
@@ -9,17 +9,25 @@ default: &default
   pool: 5
   timeout: 5000
 
-development:
-  <<: *default
-  database: DATABASE_URL
+development:  
+  adapter: postgresql
+  encoding: unicode
+  database: mysite
+  pool: 5
+  username: 
+  password: theduke23
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: DATABASE_URL
+test:  
+  adapter: postgresql
+  encoding: unicode
+  database: mysite
+  pool: 5
+  username: 
+  password: theduke23
 
-production:
-  <<: *default
-  database: DATABASE_URL
+
+# production:
+#   <<: *default
+#   database: my_production_database
+#   username: tonycarballeira
+#   password: theduke23
